# pyapp-cli

./: README.md  logger.py  main.py  pyproject.toml  questions.py  schemas.py
.github/workflows/: publish.yaml
src/pyapp_cli/: __init__.py  cli.py  generator.py  libraries.py  logger.py  project_generator.py  prompt_handler.py  pyapp_cli.py  questions.py  schemas.py  templates.py
src/pyapp_cli/templates/: fastapi.py  flask.py
