[project]
name = "pyapp-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "inquirerpy>=0.3.4",
    "pydantic>=2.12.5",
]

[project.scripts]
pyapp = "pyapp_cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
