[project]
name = "pyapp-cli"
version = "0.5.2"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "colorama>=0.4.6",
    "inquirerpy>=0.3.4",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
pyapp-cli = "pyapp_cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
